# 3D-Gaussian-Reconstruction

./: README.md  capstone_train.py  extract_mesh.py
submodules/diff-gaussian-rasterization/: CMakeLists.txt  setup.py
submodules/diff-gaussian-rasterization/cuda_rasterizer/: backward.cu  forward.cu
submodules/tetra-triangulation/: CMakeLists.txt  tetranerf_cpp_extension.exp  tetranerf_cpp_extension.lib
submodules/tetra-triangulation/src/: py_binding.cpp
utils/: depth_utils.py
